--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -12,7 +12,7 @@ a, button, a span, button span, button img, figure img {
 }
 
 #app {
-	@apply flex justify-center w-full h-svh relative overflow-hidden h-auto w-full;
+	@apply flex justify-center w-full relative overflow-hidden min-h-svh;
 }
 
 #app:before {
@@ -87,44 +87,75 @@ p, .p {
 }
 
 h1, h2, h3, h4, h5, h6, p, ul {
-	line-height:170%;
-	margin : 8px 0;
-	display : flex;
+	line-height : 170%;
+	margin      : 8px 0;
+	display     : flex;
 
 	&:first-child {
-		margin-top:0;
+		margin-top : 0;
 	}
 }
 
 ul {
-	margin:18px 0 40px;
+	margin : 18px 0 40px;
 
 	&:last-child {
-		 margin-bottom : 0;
+		margin-bottom : 0;
 	}
 }
 
 h2 + ul {
-	margin-top:5px;
+	margin-top : 5px;
 }
 
+
 hr {
-	border-color : rgba(199, 213, 255, .05);
-	margin       : 45px 0;
+	border     : 0;
+	height     : 2px;
+	background : rgba(199, 213, 255, .05);
+	margin     : 45px 0;
 }
 
 ul {
-	flex-direction: column;
+	flex-direction : column;
 }
+
 ul.horizontal {
-	flex-direction: row;
+	flex-direction : row;
+	flex-wrap      : wrap;
+
+	li {
+		white-space : nowrap;
+		@apply mr-[60px];
+	}
 }
 
 ul li {
-	@apply font-medium text-[16px] text-white pl-[32px] mr-[60px] py-[4px];
-	background: url(./check.svg) left center no-repeat;
+	@apply font-medium text-[16px] text-white pl-[32px] py-[4px];
+	background : url(./check.svg) left center no-repeat;
 
 	span {
 		@apply text-grey;
 	}
+}
+
+figure {
+	@apply relative overflow-hidden rounded-[15px] shadow-2xl *:hover:opacity-80;
+
+	&:before{
+		@apply absolute inset-0 z-10;
+		content:'';
+		box-shadow: inset 0 0 1px 1px rgba(255,255,255,0.2);
+	}
+
+	> img {
+		@apply w-full h-auto;
+	}
+	button {
+		@apply absolute inset-0 *:hover:scale-110;
+		img {
+			@apply absolute left-1/2 top-1/2 -translate-x-1/2 -translate-y-1/2;
+		}
+	}
+
 }
